Created New HTML Pages
created the remaining html pages needed for the portfolio. created pages for about me and the two projects that will be included.

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ header {
   display: flex;
   justify-content: space-between;
   border-bottom: 0.05rem solid;
+  z-index: 1000;
 }
 
 nav {
@@ -130,7 +131,8 @@ p {
   font-size: 4rem;
   font-weight: 800;
   -webkit-text-stroke: 2px white;
-  color: rgba(255, 255, 255, 0.0);
+  /* color: rgba(255, 255, 255, 0.0); */
+  color: #0A0A0A;
 }
 
 .project-type {
