--- a/css/guide.css
+++ b/css/guide.css
@@ -7,10 +7,11 @@ body {
 
 .element {
   padding: 1rem 2rem;
-  margin-bottom: 2rem;
   border-width: 0.05rem;
   border-style: solid;
   border-color: white;
+  max-width: 1060px;
+  margin: 2rem auto;
 }
 
 /* __________________STYLING FOR NAVIGATION:__________________ */
@@ -22,6 +23,11 @@ body {
 }
 
 header {
+  background: #0A0A0A;
+  position: sticky;
+  top: 0px;
+  padding-top: 1rem;
+  margin-bottom: 4rem;
   display: flex;
   justify-content: space-between;
   border-bottom: 0.05rem solid;
@@ -32,7 +38,6 @@ nav {
   flex-wrap: wrap;
   width: 100%;
   text-align: center;
-  text-decoration: none;
 }
 
 nav a {
