--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-@media (min-width: 57rem) {
+/* @media (min-width: 57rem) {
 
 }
 
@@ -12,72 +12,336 @@
     text-align: center;
   }
 
+} */
+
+@media (max-width: 1400px) {
+  .landing-head {
+    margin: 0rem;
+    padding: 2rem 10rem;
+  }
+
+  .head-logo {
+    font-size: 5rem;
+  }
 }
+
+@media (max-width: 1200px) {
+  .landing-head {
+    margin: 0rem;
+    padding: 2rem 6rem;
+  }
+
+  .head-logo {
+    font-size: 5rem;
+  }
+}
+
+@media (max-width: 970px) {
+  .landing-head {
+    margin: 0rem;
+    padding: 2rem 2rem;
+  }
+
+  .head-logo {
+    font-size: 5rem;
+    margin: 3rem 0rem 0rem 0rem;
+}
+
+  #logo {
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+  }
+
+  .project-name {
+    padding-top: 100px;
+    left: 10%;
+    font-size: 4rem;
+    font-weight: 600;
+    /* -webkit-text-stroke: 2px white; */
+    -webkit-text-stroke: 2px black;
+    color: rgba(255, 255, 255, 0.0);
+  }
+
+  .project-type {
+    position: absolute;
+    padding-top: 165px;
+    left: 10%;
+    font-size: 1.25rem;
+    color: grey;
+  }
+
+  .proj-display {
+      width: 100%;
+  }
+
+  .about-text {
+    padding: 1rem;
+    margin: 4rem 12rem 0rem 4rem;
+    max-width: 100%;
+  }
+}
+
+/* __________iPHONE 8 PLUS & iPHONE X (LANDSCAPE) SCREEN SIZE:__________ */
+
+@media (max-width:820px) {
+  .landing-head {
+    margin: 0rem;
+    padding: 2rem 0rem;
+  }
+
+  .head-logo, .sub-logo {
+    display: none;
+  }
+
+  #logo {
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+  }
+
+  header {
+    /* background: #0A0A0A; */
+    background: #f8f8f8;
+    position: sticky;
+    top: 0px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 0.05rem solid;
+    z-index: 1000
+  }
+
+  nav {
+    flex-wrap: nowrap;
+  }
+
+  nav a {
+    /* color: white; */
+    color: black;
+    font-weight: 600;
+    margin: 1rem 0.5rem 0rem 0.5rem;
+  }
+
+  .section {
+    margin: 0rem 0rem 0rem 4rem;
+  }
+
+  .project-name {
+    padding-top: 100px;
+    left: 8%;
+    font-size: 3rem;
+    font-weight: 600;
+    -webkit-text-stroke: 0px white;
+    /* color: white; */
+    color: black;
+  }
+
+  .project-type {
+    position: absolute;
+    padding-top: 155px;
+    left: 8%;
+    font-size: 1.25rem;
+    color: grey;
+  }
+
+  .proj-display {
+      width: 100%;
+  }
+
+  .about-text {
+    margin: 0rem 6rem 0rem 6rem;
+  }
+
+  /* __________________PROJECT PAGES: __________________ */
+
+  .container {
+    margin-top: 3rem;
+  }
+
+  .proj-heading {
+    margin-top: 8rem;
+    padding: 0rem;
+  }
+
+  .proj-title {
+    font-size: 4rem;
+  }
+
+  .proj-subtitle {
+    font-size: 1rem;
+  }
+}
+
+/* __________________iPHONE 8 (LANDSCAPE) SCREEN SIZE:__________________ */
+
+@media (max-width: 675px){
+  .landing-head {
+    margin: 0rem;
+    padding: 2rem 0rem;
+  }
+
+  .head-logo, .sub-logo {
+    display: none;
+  }
+
+  #logo {
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+  }
+
+  header {
+    /* background: #0A0A0A; */
+    background: #f8f8f8;
+    position: sticky;
+    top: 0px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 0.05rem solid;
+    z-index: 1000
+  }
+
+  nav {
+    flex-wrap: nowrap;
+  }
+
+  nav a {
+    /* color: white; */
+    color: black;
+    font-weight: 600;
+    margin: 1rem 0.5rem 0rem 0.5rem;
+  }
+
+  .section {
+    margin: 0rem 2rem 0rem 4rem;
+  }
+
+  .project-name {
+    padding-top: 100px;
+    left: 8%;
+    font-size: 3rem;
+    font-weight: 600;
+    -webkit-text-stroke: 0px white;
+    /* color: white; */
+    color: black;
+  }
+
+  .project-type {
+    position: absolute;
+    padding-top: 155px;
+    left: 8%;
+    font-size: 1.25rem;
+    color: grey;
+  }
+
+  .proj-display {
+      width: 100%;
+  }
+
+  .about-text {
+    margin: 0rem 2rem 0rem 2rem;
+  }
+
+  /* __________________PROJECT PAGES:__________________ */
+
+  .proj-heading {
+    margin-top: 2rem;
+  }
+
+  .proj-title {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+
+  .proj-subtitle {
+    font-size: 1rem;
+  }
+}
+
+/* __________________iPHONE X SCREEN SIZE:__________________ */
 
 @media (max-width: 375px) {
   .landing-head {
-    font-size: 2rem;
-    justify-content: center
-    margin: 0;
+    margin: 0rem;
+    padding: 1rem 0rem;
   }
-}
 
-@media (min-width: 500px){
-
-}
-
-@media (max-width: 500px) {
-
-}
-
-@media (max-width: 600px) {
-
-}
-
-@media (min-width: 668px) {
-
-}
-
-@media (max-width: 668px) {
-  .landing-head {
-    font-size: 2rem;
-    padding-top: 10rem;
-    justify-content: center
+  #logo {
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: 700;
   }
-}
 
-@media screen and (max-width:800px){
-  .landing-head {
+  header {
+    background: #0A0A0A;
+    background: #f8f8f8;
+    position: sticky;
+    top: 0px;
+    display: flex;
+    justify-content: space-between;
+    /* border-bottom: 0.05rem solid; */
+    z-index: 1000
+  }
+
+  nav {
+    flex-wrap: nowrap;
+  }
+
+  nav a {
+    /* color: white; */
+    color: black;
+    font-weight: 600;
+    margin: 1rem 0.5rem 0rem 0.5rem;
+  }
+
+  .section {
+    margin: 0rem 2rem 0rem 4rem;
+  }
+
+  .project-name {
+    padding-top: 80px;
+    left: 8%;
     font-size: 2.5rem;
-    padding: 1rem 2rem;
-    padding-top: 10rem;
-    justify-content: center
+    font-weight: 600;
+    /* -webkit-text-stroke: 0px white; */
+    /* color: white; */
+    -webkit-text-stroke: 0px black;
+    color: black;
   }
-}
 
-
-@media screen and (max-width: 900px) {
-  .landing-head {
-    font-size: 3rem;
-    padding: 2rem 2rem;
-    padding-top: 10rem;
-    justify-content: center
+  .project-type {
+    position: absolute;
+    padding-top: 130px;
+    left: 8%;
+    font-size: 1rem;
+    color: grey;
   }
-}
 
-@media(min-width:1000px) {
-  .landing-head {
-    font-size: 3rem;
-    padding: 2rem 2rem;
-    padding-top: 10rem;
-    justify-content: center
+  .proj-display {
+      width: 100%;
   }
-}
 
-@media (max-width: 1000px) {
+  .about-text {
+    margin: 0rem 2rem 0rem 2rem;
+    max-width: 100%;
+  }
 
-}
+  /* __________________PROJECT PAGES: __________________ */
 
-@media (max-width: 1320px) {
+  .proj-heading {
+    margin-top: 8rem;
+  }
 
+  .proj-title {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+
+  .proj-subtitle {
+    font-size: 1rem;
+  }
+
+  .proj-finalimg {
+    flex-wrap: wrap;
+  }
 }
