Created Citation Page & Added Button Into Style Guide
created layout and added content into the citation page. Added button element into style guide.

--- a/css/main-white.css
+++ b/css/main-white.css
@@ -201,7 +201,14 @@ p {
   opacity: 0.75;
 }
 
-/* __________________STYLING FOR FOOTER:__________________ */
+/* __________________STYLING FOR FOOTER & CITAIONS:__________________ */
+
+.citation-section {
+  margin: 2rem auto;
+  padding: 0rem 2rem 10rem 2rem;
+  max-width: 800px;
+  overflow: auto;
+}
 
 footer {
   bottom: 0;
