--- a/css/main-white.css
+++ b/css/main-white.css
@@ -5,14 +5,6 @@ body {
   margin: 0rem;
 }
 
-/* .element {
-  padding: 1rem 2rem;
-  margin-bottom: 2rem;
-  border-width: 0.05rem;
-  border-style: solid;
-  border-color: #f8f8f8;
-} */
-
 .element-guide {
   padding: 1rem 2rem;
   border-width: 0.05rem;
@@ -97,13 +89,9 @@ h2 {
 }
 
 h3 {
-  font-size: 1.8rem;
-  margin: 1rem 0rem;
-}
-
-h4 {
+  color: #41698D;
   font-size: 1.5rem;
-  margin: 0.5rem 0rem;
+  margin: 0.25rem 0rem 0.5rem 0rem;
 }
 
 p {
@@ -181,7 +169,7 @@ p {
   display: flex;
   justify-content: center;
   max-width: 100%;
-  margin: 2rem 0rem;
+  margin: 1rem 0rem;
 }
 
 /* __________________NEXT PROJECT BUTTON__________________ */
