--- a/css/main-white.css
+++ b/css/main-white.css
@@ -172,6 +172,10 @@ p {
   margin: 1rem 0rem;
 }
 
+ul {
+  list-style-type: dash;
+}
+
 /* __________________NEXT PROJECT BUTTON__________________ */
 
 .button-product {
